--- a/Facebook/Facebook/Facebook.csproj
+++ b/Facebook/Facebook/Facebook.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NUnit" Version="4.1.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.21.0" />
   </ItemGroup>
 
